# muthrift

./: CMakeLists.txt
src/: muthrift_svr.cpp  muthrift_svr.h
ut/: server_test.cpp
